# RansomRadar

./: .gitignore  README.md  requirements.txt
code/: config.py  read_hpc_file.py  read_irp_file.py  sample_process.py  step0_preprocess.py  step1_extract_feature.py  step2_encryption_detection.py  step3_temporal_correlation_detection.py  step4_final_result.py
features/100ms/benign/: benign1.csv  benign10.csv  benign11.csv  benign12.csv  benign13.csv  benign14.csv  benign15.csv  benign16.csv  benign17.csv  benign18.csv  benign19.csv  benign20.csv  benign21.csv  benign22.csv  benign23.csv  benign3.csv  benign4.csv  benign5.csv  benign6.csv  benign7.csv  benign8.csv  benign9.csv
features/100ms/ransomware/: 1229-0a77fc85a49ed22e8a829c57253cffff4af89a690cec2125ebdb53be09f64e86.csv  1230-ed01ebfbc9eb5bbea545af4d01bf5f1071661840480439c6e5babe8e080e41aa.csv  1231-e6c001244a800293036aa24bdbd1900c398dcd129c94150addca798112b6d6de.csv  1390-2c649b7ff537c0b72a244bfa1688594bb3ff426b23bb147e0544b6bad7b8b7b6.csv  2006-cb4af8d6d57163b0322bd033b36379f805bdb59ec550049ea568cc0a7dfe52cd.csv  (+95 more)
helper/: parse.wpaProfile
helper/PARSER/: PARSER.sln
models/: encryption_detection_scaler.joblib  tc_detection_clf.pth  tc_detection_scaler.joblib
monitor/: record.wprp
monitor/IOMonitor/: IRPCollection.c  IRPCollection.h
monitor/IOMonitor/minifilter_helper/: Cargo.toml
monitor/IOMonitor/minifilter_helper/src/: allocator.rs  common.rs  header.rs  lib.rs
scripts/: activate_venv.ps1  add_vs_devenv_to_user_path.ps1  remove_vs_devenv_from_user_path.ps1  setup_venv.ps1
(+263 files in other folders)
