[package]
name = "minifilter_helper"
version = "0.1.0"
edition = "2021"

[lib]
name = "minifilter_helper"
crate-type = ["staticlib"]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#cty = "0.2"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
micromath = "2.0"
libm = "0.2"
spin = "0.9.3"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
